<resources>
    <string name="app_name">FareShare</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="groups_page_label">Groups</string>
    <string name="create_group_page_label">Create Group</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="account">Account</string>
    <string name="create_group">Create Group</string>
    <string name="phone_number_prompt">Enter the group members\' phone numbers</string>
    <string name="scanner_label">Scanner</string>
    <string name="scan_taxi">Scan QR Code</string>
    <string name="destination_prompt">Enter your destination address</string>
    <string name="pickup_prompt">Enter your pickup address</string>
    <string name="save_changes">Save Changes</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Not yet registered? Sign Up Now</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Login</string>

    <!-- String related to MFA Page -->
    <string name="authenticator_header">2-Factor Authentication</string>
    <string name="token_hint">Enter token</string>
    <string name="authenticator_info">Input the verification code we sent to your phone</string>
    <string name="authenticator_back_button">Back</string>
    <string name="authenticator_Verify_button">Verify</string>

    <!-- String related to Home Page -->
    <string name="groups_button_text">Groups</string>
    <string name="offer_button_text">Offer Carpool</string>
    <string name="request_button_text">Request Carpool</string>
    <string name="incident_button_text">Report Incident</string>
    <string name="logout_button_text">Logout</string>
    <string name="account_button_text">Account</string>
    <string name="home_button_text">Home</string>
    <string name="title_activity_home">Home</string>
    <string name="home_page_welcome">Welcome User!</string>

    <!-- String related to Registration Page -->
    <string name="registration_page_title">Register</string>
    <string name="register_Name_hint">First Name</string>
    <string name="register_Lastname_hint">Last Name</string>
    <string name="register_date_of_birth_hint">Date of Birth</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password1">Enter Password</string>
    <string name="register_password2">Enter Password Again</string>
    <string name="register_number_hint">Cell Phone Number</string>
    <string name="register_Street_name_hint">Street</string>
    <string name="register_City_hint">City</string>
    <string name="register_province_hint">Province</string>
    <string name="register_postal_code_hint">Postal Code</string>
    <string name="register_country_hint">Country</string>
    <string name="register_button_text">Register</string>
    <string name="register_cancel_button">Cancel</string>

    <!-- Strings related to Navigation Drawer -->
    <string name="title_activity_home2">Home2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Strings related to Shazim's Pages -->
    <string name="offer_wait_message_text">PLEASE WAIT WHILE WE LOOK FOR PENDING REQUESTS</string>
    <string name="offer_wait_map_description">Map Displaying Destination</string>
    <string name="carpool_offer_title_text">Carpool Information</string>
    <string name="offer_carpool_destination_box_text">Enter Destination</string>
    <string name="offer_carpool_pickup_box_text">Enter Pick-up Location</string>
    <string name="offer_carpool_date_box_text">Enter Date and Time</string>
    <string name="offer_carpool_numpass_box_text">Enter Maximum Number of Passengers</string>
    <string name="offer_carpool_submit_text">SUBMIT</string>
    <string name="offer_carpool_cancel_text">CANCEL</string>
    <string name="request_incoming_ppic_desc">requester profile picture</string>
    <string name="request_incoming_accept_text">ACCEPT</string>
    <string name="request_incoming_reject_text">REJECT</string>
    <string name="request_incoming_back_text">BACK</string>
    <string name="request_incoming_next_text">NEXT</string>
    <string name="request_incoming_name_text">Firstname Lastname</string>
    <string name="request_incoming_rating_text">Rating: N stars</string>
    <string name="carpool_ride_message_text">Ongoing Ride Information</string>
    <string name="carpool_ride_page_mapview_desc">Map displaying route</string>
    <string name="carpool_ride_page_taxiID_text">TaxiID: placeholder</string>
    <string name="carpool_ride_page_passengers_text">Passengers: placeholder</string>
    <string name="carpool_ride_page_dest_text">Destination: placeholder</string>
    <string name="carpool_end_page_title_text">Thanks for Riding with FareShare!</string>
    <string name="carpool_end_page_fare_message_text">"Your fare is: "</string>
    <string name="carpool_end_page_fare_text">$X.XX</string>
    <string name="carpool_end_page_rate_button_text">Rate Passengers</string>
    <string name="carpool_end_page_report_button_text">Report Incident</string>
    <string name="destination_box">Edit destination address</string>
    <string name="pickup_box">Edit pickup address</string>

    <string name="request_accepted_title_text">Your Request Was Accepted!</string>
    <string name="request_accepted_taxiID_text">TaxiID: Placeholder</string>
    <string name="request_accepted_passengers_text">Passengers: Placeholder</string>
    <string name="request_accepted_dest_text">Destination: Placeholder</string>
    <string name="request_rejected_back_button_text">BACK</string>
    <string name="request_rejected_title_text">Your Request was Rejected</string>
    <string name="request_rejected_cancel_button_text">CANCEL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_wait_title_text">Please Wait While We Search for Offers</string>
    <string name="birthday_year_hint">YYYY</string>
    <string name="birthday_month_hint">MM</string>
    <string name="birthday_day_hint">DD</string>
    <string name="request_select_submit_button_text">SUBMIT</string>
    <string name="request_select_cancel_button_text">CANCEL</string>
    <string name="request_select_title_text">Select an Offer</string>
    <string name="request_select_editText_text">Select Offer</string>
    <string name="incident_textbox_hint">Enter details of the incident here</string>
    <string name="incident_email_hint">Enter email here</string>
    <string name="incident_page_title">Incident Report</string>

    <!-- Strings for Google Maps -->
    <string name = "google_maps_api_key">AIzaSyCbdncRgHDvT0-FiS2OrO0laxmHIPFYLek</string>
    <string name="title_activity_maps">MapsActivity</string>

=======
    <!-- Logout Strings -->
    <string name="logout">Logout?</string>
    <string name="logout_confirm">Confirm</string>
    <string name="logout_cancel">Cancel</string>
>>>>>>> origin/master

</resources>