<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RequestAcceptedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/request_accepted_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_accepted_title_text"
            android:textAlignment="center"
            android:textColor="@color/fareShare_black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="30sp" />

        <TextView
            android:id="@+id/request_accepted_taxiID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_accepted_taxiID_text"
            android:textColor="@color/fareShare_black"
            android:padding="12sp"/>

        <TextView
            android:id="@+id/request_accepted_passengers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_accepted_passengers_text"
            android:textColor="@color/fareShare_black"
            android:padding="12sp"/>

        <TextView
            android:id="@+id/request_accepted_dest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_accepted_dest_text"
            android:textColor="@color/fareShare_black"
            android:padding="12sp"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/request_accepted_mapview"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/carpool_ride_page_mapview_desc"
            android:padding="12sp"/>
    </LinearLayout>

</FrameLayout>