<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="150dp"
    android:background="@color/black"
    tools:context=".AuthenticatorFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/authenticator_header"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:paddingTop="12dp"
        android:text="@string/authenticator_info"
        android:textColor="#CDC7C7"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/token"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_gravity="left"
        android:paddingTop="60dp"
        android:backgroundTint="@color/fareShare_yellow"
        android:inputType="number"
        android:hint="@string/token_hint"
        android:textColorHint="#CDC7C7"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/back_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/authenticator_back_button"
            android:backgroundTint="@color/fareShare_yellow"
            android:textColor="@color/black"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/fareShare_yellow"
            android:text="@string/authenticator_Verify_button"
            android:textColor="@color/black"
            app:cornerRadius="20dp" />

    </LinearLayout>

</LinearLayout>