<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:padding="30dp">

            <TextView
                android:id="@+id/registration_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_page_title"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_firstname_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_Name_hint"
                android:backgroundTint="@color/fareShare_yellow"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <EditText
                android:id="@+id/register_lastname_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_Lastname_hint"
                android:shadowColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/email_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_email_hint"
                android:shadowColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />

            <!-- TODO: password visibility thing -->
            <EditText
                android:id="@+id/password1_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_password1"
                android:shadowColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/password2_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_password2"
                android:shadowColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/register_birthday_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_date_of_birth_hint"
                android:inputType="date"
                android:padding="12dp"
                android:shadowColor="@color/black"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/phonenumber_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_number_hint"
                android:shadowColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:inputType="text|phone"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />

            <!--            <EditText-->
            <!--                android:id="@+id/street_box"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:backgroundTint="@color/black"-->
            <!--                android:hint="Address"-->
            <!--                android:shadowColor="@color/black"-->
            <!--                android:textColorHint="@color/black"-->
            <!--                android:padding="12dp"-->
            <!--                android:inputType="textPostalAddress|textMultiLine"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textColorHighlight="@color/cardview_dark_background"-->
            <!--                android:layout_marginTop="40dp"-->
            <!--                android:autofillHints="" />-->

            <EditText
                android:id="@+id/street_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_Street_name_hint"
                android:shadowColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:inputType="textPostalAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/city_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_City_hint"
                android:shadowColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:inputType="textPostalAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/province_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_province_hint"
                android:shadowColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:inputType="textPostalAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/postalCode_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_postal_code_hint"
                android:shadowColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:inputType="textPostalAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/country_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fareShare_yellow"
                android:hint="@string/register_country_hint"
                android:shadowColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:inputType="textPostalAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/registrationButton"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/register_button_text"
                    android:backgroundTint="@color/fareShare_yellow"
                    android:textColor="@color/black"
                    app:cornerRadius="20dp"/>

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/fareShare_yellow"
                    android:text="@string/register_cancel_button"
                    android:textColor="@color/black"
                    app:cornerRadius="20dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>