<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#054207"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_page_welcome"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp" />

        <Button
            android:id="@+id/offer_button"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/fareShare_yellow"
            android:text="@string/offer_button_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/request_button"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:backgroundTint="@color/fareShare_yellow"
            android:text="@string/request_button_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="20dp"/>

    </LinearLayout>

</RelativeLayout>